Improve aidherance to the ddd airchitecture
